--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
     "react-hook-form": "^7.54.2",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
