--- a/package.json
+++ b/package.json
@@ -49,13 +49,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/contracts": "^5.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "hardhat": "^2.22.18",
+    "hardhat": "^2.22.19",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
