--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
+    "mongoose": "^8.13.2",
     "motion": "^12.5.0",
     "next": "15.1.7",
+    "nodemon": "^3.1.9",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.3",
@@ -56,7 +61,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-transition-group": "^4.4.12",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "hardhat": "^2.22.19",
