--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.11.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.13.2",
