--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@privy-io/react-auth": "^2.6.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -29,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/snarkjs": "^0.7.9",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +54,7 @@
     "react-icons": "^5.5.0",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
+    "snarkjs": "^0.7.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "^1.4.0",
